import com.github.spotbugs.snom.SpotBugsTask
import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.Confidence

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'checkstyle'
    id 'pmd'
    id 'com.github.spotbugs' version '6.0.28'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.alphaflow'
version = '0.1.0-SNAPSHOT'
description = 'Alpha Flow Application'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:deprecation"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    compileOnly 'com.github.spotbugs:spotbugs-annotations:4.8.6'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    spotbugs 'com.github.spotbugs:spotbugs:4.10.3'
    spotbugs 'org.apache.commons:commons-lang3:3.20.0'
}

/* =========================================================================
   Static Analysis & Linting Configurations
   ========================================================================= */

checkstyle {
    toolVersion = '10.15.0'
    ignoreFailures = false
    showViolations = true
    configFile = file("${projectDir}/config/checkstyle/google_checks.xml")
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        googleJavaFormat('1.27.0')
    }
}

pmd {
    toolVersion = '7.21.0'
    ignoreFailures = false
    consoleOutput = true
    ruleSets = []
    ruleSetFiles = files("${projectDir}/config/pmd/pmd-ruleset.xml")
}

spotbugs {
    toolVersion = '4.10.3'
    ignoreFailures = false
    showProgress = false
    effort = Effort.valueOf('MAX')
    reportLevel = Confidence.valueOf('MEDIUM')
    excludeFilter = file("${projectDir}/config/spotbugs/excludeFilter.xml")
}

tasks.withType(Checkstyle).configureEach {
    outputs.upToDateWhen { false }
    reports {
        xml.required = false
        html.required = true
    }
}

tasks.withType(Pmd).configureEach {
    outputs.upToDateWhen { false }
    reports {
        xml.required = false
        html.required = true
    }
}

tasks.withType(SpotBugsTask).configureEach {
    outputs.upToDateWhen { false }
    reports {
        xml {
            required = false
        }
        html {
            required = true
        }
    }
}

/* =========================================================================
   Testing & Test Coverage Verification
   ========================================================================= */

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
            excludes = [
                    'com.alphaflow.api.dtos.*',
                    'com.alphaflow.api.mappers.*',
                    'com.alphaflow.persistence.entities.*',
                    'com.alphaflow.persistence.enums.*',
                    'com.alphaflow.persistence.exceptions.*',
                    'com.alphaflow.persistence.repositories.*'
            ]
        }
    }
}

bootRun {
    systemProperty 'java.net.preferIPv4Stack', 'true'
}

springBoot {
    mainClass = 'com.alphaflow.AlphaFlowApp'
}
